Bug 1372883: wasm baseline: don't read returned values from x87 FPU stack on x86; r=lth

MozReview-Commit-ID: L2ovA8EXqy1